[package]
name = "icepipe"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
base64 = "0.13.0"
env_logger = "0.9.0"
futures-util = "0.3.15"
log = "0.4.14"
ring = "0.16.20"
tokio = "1.8.0"
tokio-tungstenite = { version = "0.15.0", features = ["rustls-tls"] }
url = "2.2.2"
webrtc-ice = "0.2.3"
webrtc-sctp = "0.2.3"
webrtc-util = "0.2.3"