[package]
name = "icepipe"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Peer to Peer communication encrypted using WebRTC"
repository = "https://github.com/Andrepuel/icepipe"
categories = ["cryptography", "network-programming"]
keywords = ["socket", "sctp", "udp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
base64 = "0.13.0"
bytes = "1.1.0"
clap = { version = "^3.2.0", features = ["derive"] }
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.17"
ring = "0.16.20"
tokio = "1.19.2"
tokio-tungstenite = { version = "0.17.1", features = [
    "rustls-tls-native-roots",
] }
url = "2.2.2"
webrtc-ice = "0.7.0"
webrtc-sctp = "0.5.0"
webrtc-util = "0.5.4"
