[package]
name = "icepipe"
version = "0.4.1"
edition = "2021"
license-file = "LICENSE"
description = "Peer to Peer communication encrypted using WebRTC"
repository = "https://github.com/Andrepuel/icepipe"
categories = ["cryptography", "network-programming"]
keywords = ["socket", "sctp", "udp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
bytes = "1.4"
clap = { version = "4.1", features = ["derive"] }
curve25519-dalek = { version = "3.2.1", default-features = false, features = ["u64_backend"]}
env_logger = "0.10"
futures = "0.3"
log = "0.4"
ring = "0.16.20"
thiserror = "1.0.38"
tokio = "1.25"
tokio-tungstenite = { version = "0.18", features = [
    "rustls-tls-native-roots",
] }
url = "2.3"
webrtc-ice = "0.9"
webrtc-sctp = "0.7"
webrtc-util = "0.7"
x25519-dalek = { version = "1.2.0", default-features = false }
